--- a/data/config.ini
+++ b/data/config.ini
@@ -6,7 +6,7 @@ GUIDE = true
 BCJH = false
 
 #多线程开关，适合跑迭代小的，不适合跑大迭代
-MP = t
+MP = f
 
 [guestConfig]
 #贵客的数量，郡级及以下为1，州级为2，省级为2
@@ -25,14 +25,15 @@ NUM_GUESTS = 2
 #10蓝采和28饱食
 #11胡喜媚44饱食
 #12曹国舅
-guestList =3 4
+#13钟离权
+guestList = 13 2
 
 [calculator]
 #选择厨师组合的迭代次数，建议30000，不建议低于5000，不建议超过50000
-ITER_CHEF = 5000
+ITER_CHEF = 10000
 
 #对每组厨师，选择菜谱组合的迭代次数，建议30000，不建议低于10000，不建议超过50000
-ITER_RECIPE = 1000
+ITER_RECIPE = 10000
 
 #不计算1火厨师(true为不计算，false为计算)
 AVOID_CHEF_1 = true
@@ -50,5 +51,5 @@ TARGET_SCORE_APPROXIMATE = 3000000
 #***************************************************
 #** 以下内容不建议修改，除非你清楚地知道这是什么意思 **
 #***************************************************
-T_MAX_CHEF = 100
-T_MAX_RECIPE = 400
+T_MAX_CHEF = 50
+T_MAX_RECIPE = 100
